assets/css/style.css
/* ... */
.dordrecht-map-frame iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

/*----Contact Us Page----*/

.contact-us-page-title {
    margin-top: 30px;
    margin-bottom: 30px;
    text-align: center;
    color: #ffe6c7;
    font-size: 50px;
    font-family: "Roboto Condensed", sans-serif;
}

.contact-us-form {
    color: #ffe6c7;
}

.contact-us {
    text-align: center;
}

.contact-us-form label {
    display: block;
    padding-bottom: 10px;
}

.contact-us-form input {
    margin-bottom: 10px;
}

.required::after {
    content: ' *';
    color: red;
  }

input[type=text], select, textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    resize: vertical;
  }

  input[type=email] {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    resize: vertical;
  }

  /*--code snippet taken from w3 schools--*/

.contact-us-form fieldset {
    border: solid;
    text-align: center;
    display: block;
    padding: 20px;
    margin: 20px;
    font-family: "Roboto Condensed", sans-serif;
}

fieldset legend {
    float: none;
    font-size: 25px;
}

#reset-button {
    background-color: #ff6000;
    color: black;
    border: black;
}

#reset-button:hover {
    background-color: #DA0C0C;
}

#submit-button {
    background-color: #ff6000;
    color: black;
    border: black;
    padding-left: 30px;
    padding-right: 30px;
    margin-top: 10px;
}

#submit-button:hover {
    background-color: #5AC000;
}

/*----Gallery----*/

#rotterdam-gallery {
    margin-top: 40px;
}

#rotterdam-gallery h1 {
    color: #ffe6c7;
    font-family: "Roboto Condensed", sans-serif;
    text-align: center;
    margin-bottom: 10px;
}

#rotterdam-gallery h5 {
    color: #ffe6c7;
    background-color: rgba(0, 0, 0, 0.60);
    font-family: "Roboto Condensed", sans-serif;
}

#rotterdam-gallery p {
    color: #ffe6c7;
    background-color: rgba(0, 0, 0, 0.60);
    font-family: "Roboto Condensed", sans-serif;
}

#utrecht-gallery {
    margin-top: 40px;
}

#utrecht-gallery h1 {
    color: #ffe6c7;
    font-family: "Roboto Condensed", sans-serif;
    text-align: center;
    margin-bottom: 10px;
}

#utrecht-gallery h5 {
    color: #ffe6c7;
    background-color: rgba(0, 0, 0, 0.60);
    font-family: "Roboto Condensed", sans-serif;
}

#utrecht-gallery p {
    color: #ffe6c7;
    background-color: rgba(0, 0, 0, 0.60);
    font-family: "Roboto Condensed", sans-serif;
}

#dordrecht-gallery {
    margin-top: 40px;
    margin-bottom: 20px;
}

#dordrecht-gallery h1 {
    color: #ffe6c7;
    font-family: "Roboto Condensed", sans-serif;
    text-align: center;
    margin-bottom: 10px;
}

#dordrecht-gallery h5 {
    color: #ffe6c7;
    background-color: rgba(0, 0, 0, 0.60);
    font-family: "Roboto Condensed", sans-serif;
}

#dordrecht-gallery p {
    color: #ffe6c7;
    background-color: rgba(0, 0, 0, 0.60);
    font-family: "Roboto Condensed", sans-serif;
}

#last-carousel-container {
    margin-bottom: 30px;
}

/*----Submit Page----*/

#submit-page-buttons-container {
    margin-bottom: 30px;
}

#submit-page-buttons a {
    background-color: #ff6000;
    color: black;
    border: black;
    padding-left: 30px;
    padding-right: 30px;
    margin-top: 20px;
    text-align: center;
    font-family: "Roboto Condensed", sans-serif;
}

#thankyou-section h1 {
    margin-top: 40px;
    margin-bottom: 40px;
    text-align: center;
    color: #ffe6c7;
    font-size: 60px;
    font-family: "Roboto Condensed", sans-serif;
}

#thankyou-section h2 {
    margin-top: 40px;
    margin-bottom: 40px;
    text-align: center;
    color: #ffe6c7;
    font-size: 35px;
    font-family: "Roboto Condensed", sans-serif;
}

#next-update-list {
    text-align: start;
    font-size: 25px;
    color: #ffe6c7;
    font-family: "Roboto Condensed", sans-serif;
}

/*------------------------------Footer------------------------------*/

footer {
    min-height: 60px;
    margin-top: auto;
    background-color: #ff6000;
}

#social-media-links li a {
    text-decoration: none;
    color: black;
}

#social-media-links li {
    display: inline;
}

.social-media {
    padding-right: 30px;
    padding-top: 10px;
}

.social-media ul li {
    list-style-type: none;
    border: none;
    text-decoration: none;
    padding-right: 30px;
    padding-top: 10px;
    font-size: 25px;
}

#contact-us-footer {
    padding-right: 30px;
    padding-top: 10px;
    font-size: 25px;
}

#contact-us-footer li a {
    color: black;
}

.contact-us-footer-link {
    float: right;
    list-style-type: none;
}

/*------------------------------Media Queries------------------------------*/

@media only screen and (max-width: 1200px) {
    
    .page-header {
        padding: 25px;
    }
    
    .how-to-title {
        font-size: 20px;
    }
    .country-title {
        font-size: 30px;
    }
}

@media only screen and (max-width: 576px) {
    .how-to-title {
        font-size: 15px;
    }
    .country-title {
        font-size: 25px;
    }

    .social-media ul li {
        padding: 5px;
        font-size: 18px;
    }
    #contact-us-footer {
        font-size: 18px;
    }
    
}

@media only screen and (max-width: 395px) {
    .how-to-title {
        font-size: 10px;
    }
    .country-title {
        font-size: 16px;
    }

    .social-media ul li {
        padding: 2px;
        font-size: 16px;
    }

    #contact-us-footer {
        font-size: 16px;
    }
    
}

